src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Global_Territory__c</fullName>
        <description>Indicates what global region the Account is part of based on the shipping country. Correction made to the original list. JIRA: SFDCSPT-248</description>
        <formula>IF(ISBLANK(ShippingCountry), &quot;None&quot;,


IF(CONTAINS(&quot;Algeria : Armenia : Austria : Azerbaijan : Bahrain : Belarus : Belgium : Bosnia and Herzegovina : Bulgaria : Cameroon : Croatia : Cyprus : Czech Republic : Denmark : Egypt : Estonia : Ethiopia : Finland : France : Georgia : Germany : Ghana : Gibraltar : Greece : Hungary : Iceland : Iran : Iran : Ireland : Israel : Italy : Ivory Coast : Jordan : Kazakhstan : Kenya : Kuwait : Lebanon : Lithuania : Luxembourg : Malta : Monaco : Morocco : Netherlands : Nigeria : Norway : Oman : Poland : Portugal : Qatar : Romania : Russian Federation : Saudi Arabia : Serbia : Slovakia : Slovenia : South Africa : Spain : Sweden : Switzerland : Tunisia : Turkey : Uganda : Ukraine : United Arab Emirates : United Kingdom : Uzbekistan : Virgin Islands (British) : Zimbabwe : Sudan : Senegal&quot;, ShippingCountry), &quot;EMEA&quot;,


IF(CONTAINS(&quot;Bermuda : Canada : United States&quot;, ShippingCountry), &quot;NA&quot;,


IF(CONTAINS(&quot;Antigua and Barbuda : Argentina : Barbados : Brazil : Cayman Islands : Chile : Colombia : Costa Rica : Guatemala : Paraguay : Panama : Guyana : Peru : Ecuador : El Salvador : Mexico : Nicaragua : Uruguay : Venezuela : Honduras : Cuba : Jamaica : Bolivia : Anguilla : Bahamas : Belize : Dominica : Dominican Republic : Falkland Islands : Trinidad and Tobago : French Guiana&quot;,ShippingCountry),&quot;LATAM&quot;,


IF(CONTAINS(&quot;Australia : Bangladesh : Cambodia : Bhutan : China : Guam : Hong Kong : India : Indonesia : Japan : Laos : Malaysia : Nepal : New Zealand : Pakistan : Philippines : Singapore : South Korea : Sri Lanka : Taiwan : Thailand : Vietnam : Myanmar : Brunei Darussalam : Macau : Mongolia&quot;, ShippingCountry),&quot;APAC&quot;,


&quot;Unassigned&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates what global region the Account is part of based on the shipping country.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyDUNSAndAccountType__c</fullName>
        <description>This field is used to facilitate the creation of separate Customer and Partner Hierarchies. It concatenates the D&amp;B DUNS Number and Record Type Name. Used by Traction Hierarchies tool to differentiate between the two types of accounts when creating hierarchies.</description>
        <formula>IF(ISBLANK(DNBoptimizer__DNB_D_U_N_S_Number__c), &quot;&quot;, DNBoptimizer__DNB_D_U_N_S_Number__c  &amp; &quot;-&quot; &amp; RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TBD</inlineHelpText>
        <label>DUNS &amp; Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyDomesticUltimateDUNSAccountType__c</fullName>
        <formula>IF(ISBLANK(D_B_Domestic_Ultimate_D_U_N_S_Number__c), &quot;&quot;, D_B_Domestic_Ultimate_D_U_N_S_Number__c &amp; &quot;-&quot; &amp; RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domestic Ultimate DUNS &amp; Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyGlobalUltimateDUNSAccountType__c</fullName>
        <formula>IF(ISBLANK(D_B_Global_Ultimate_D_U_N_S_Number__c), &quot;&quot;, D_B_Global_Ultimate_D_U_N_S_Number__c &amp; &quot;-&quot; &amp; RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Ultimate DUNS &amp; Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HierarchyParentDUNSAccountType__c</fullName>
        <formula>IF(NOT(ISBLANK(D_B_Parent_D_U_N_S_Number__c)), D_B_Parent_D_U_N_S_Number__c &amp; &quot;-&quot; &amp; RecordType.Name,
IF(NOT(ISBLANK(D_B_Headquarter_D_U_N_S_Number__c)), D_B_Headquarter_D_U_N_S_Number__c &amp; &quot;-&quot; &amp; RecordType.Name,
NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent DUNS &amp; Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_from_Whitespace__c</fullName>
        <description>This field is part of the Traction Hierarchy app implementation. It will be auto-populated whenever an Account is created through the Traction Hierarchy app using Whitespace. Do NOT change field type to Checkbox as it will not work with Traction. 
JIRA: SFDCSPT-149</description>
        <inlineHelpText>This field is auto-populated whenever an Account is created through the Traction Hierarchy app using Whitespace.</inlineHelpText>
        <label>Imported from Whitespace</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>JBCXM_Account_CustInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomain__c</fullName>
        <description>Derived Email Domain from contact emails</description>
        <label>LD_EmailDomain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__LD_EmailDomains__c</fullName>
        <description>Derived Email Domains from contact emails</description>
        <label>LD_EmailDomains</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Has_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Has Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Marketing_Touch_Date__c</fullName>
        <label>Reporting Last Marketing Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Last_Sales_Touch_Date__c</fullName>
        <label>Reporting Last Sales Touch Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Recent_Marketing_Touches__c</fullName>
        <label>Reporting Recent Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account_Number__c</fullName>
        <formula>IF( LeanData__Reporting_Target_Account__c, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Target Acct Num (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Target Account (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Leads_and_Contacts__c</fullName>
        <label>Reporting Total Leads and Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Sales_Touches__c</fullName>
        <label>Reporting Total Sales Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_1_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 1 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_1_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_2_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 2 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_2_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Scenario_3_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scenario 3 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scenario_3_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <description>LeanData search field</description>
        <label>LeanData Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Status_Info__c</fullName>
        <label>State Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tag__c</fullName>
        <label>Tag</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIN_Close_Date_of_All_Closed_Wons__c</fullName>
        <description>For Magic Robot - custom roll up summary field on the account that Gives the MIN date of the CLOSE date of The closed won opportunities only.</description>
        <label>MIN Close Date of All Closed Wons</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MIN_Created_Date_of_All_Opps__c</fullName>
        <description>for Magic Robot -  custom roll up summary field on the account that Gives the MIN date of the Created date of all opportunities on that count.</description>
        <label>MIN Created Date of All Opps</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Of_ID__c</fullName>
        <description>We don&apos;t know what this field is for. We couldn&apos;t find any dependencies in SFDC, but the field might be updated by third-party apps. We&apos;re hiding it through FLS on 9/23/2021 for now with the intention of deprecating it if no one comes back within three months of this date to tell us they need it.</description>
        <externalId>true</externalId>
        <label>z_Member Of ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an account is a named account for a sales rep</description>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Neo_Account_Employees__c</fullName>
        <description>Picklist to normalize the number of employees for an account.</description>
        <label>Account Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 19</fullName>
                </value>
                <value>
                    <fullName>20 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 249</fullName>
                </value>
                <value>
                    <fullName>250 to 499</fullName>
                </value>
                <value>
                    <fullName>500 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 2,499</fullName>
                </value>
                <value>
                    <fullName>2,500 to 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 to 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Lost_Opportunities__c</fullName>
        <description>Rollup Summary of closed lost opportunities on account</description>
        <label>Number of Closed Lost Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Won_Opportunities__c</fullName>
        <description>Rollup summary of Closed Won opportunities on an account</description>
        <label>Number of Closed Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <description>Rollupfield Using Rollup helper that displays number of contacts linked to an account</description>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_New_Opportunities__c</fullName>
        <description>Rollup Summary of opportunities that are not in renewal stages</description>
        <label>Number of Open New Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Qualification, Needs Analysis, Proposal/Price Quote, Selected / Negotiation, Contract Negotiation, Procurement, Sales Ops Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OEM_Named_Account__c</fullName>
        <description>Indicates if an account is an OEM Named account</description>
        <label>OEM Named Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>James Landeros</fullName>
                </value>
                <value>
                    <fullName>Kevin Van Gundy</fullName>
                    <isActive>false</isActive>
                    <label>Kevin Van Gundy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POC_Perpetual_Group_Products_Closed_Won__c</fullName>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;POC/Perpetual&quot;, associated with Closed Won Opportunities on the Account (POC: Advanced, Enterprise, OEM (Platform), PS – Consulting and, Perpetual - OEM (Royalty)). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;POC/Perpetual&quot; associated with Closed Won Opportunities on the Account (POC: Advanced, Enterprise, OEM (Platform), PS – Consulting and, Perpetual - OEM (Royalty)).</inlineHelpText>
        <label>POC/Perp. Group Products (Closed Won)</label>
        <summaryFilterItems>
            <field>Opportunity.POC_Perpetual_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>POC_Perpetual_Group_Products_Open__c</fullName>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;POC/Perpetual&quot;, associated with Open Opportunities on the Account (POC: Advanced, Enterprise, OEM (Platform), PS – Consulting and, Perpetual - OEM (Royalty)). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;POC/Perpetual&quot; associated with Open Opportunities on the Account (POC: Advanced, Enterprise, OEM (Platform), PS – Consulting and, Perpetual - OEM (Royalty)).</inlineHelpText>
        <label>POC/Perp. Group Products (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.POC_Perpetual_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Qualification SDR, Qualification, Needs Analysis, Renewal 25%, Proposal/Price Quote, Renewal 50%, Selected / Negotiation, Renewal 75%, Renewal DQ 90%, Contract Negotiation, Procurement, Sales Ops Review, Finance Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if account requires a PO</description>
        <label>PO Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Sub_Type__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <description>Indicates what specific partner type this company is to Neo4j. SFDCSPT-540</description>
        <inlineHelpText>Indicates what specific partner type this company is to Neo4j. Multiple values can be selected. ATTENTION: This field will be deprecated. Use &apos;Account Subtype&apos; field instead.</inlineHelpText>
        <label>Partner Subtype (DeprecateCandidate)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Systems Integrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Group_Products_Closed_Won__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Partnership&quot;, associated with Open Opportunities on the Account (Partnership). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Partnership&quot; associated with Open Opportunities on the Account (Partnership).</inlineHelpText>
        <label>Partnership Group Products (Closed Won)</label>
        <summaryFilterItems>
            <field>Opportunity.Partnership_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Partnership_Group_Products_Open__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Partnership&quot;, associated with Open Opportunities on the Account (Professional Services: Consulting, Innovation Lab, Training). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Partnership&quot; associated with Open Opportunities on the Account (Partnership).</inlineHelpText>
        <label>Partnership Group Products (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.Partnership_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Qualification SDR, Qualification, Needs Analysis, Renewal 25%, Proposal/Price Quote, Renewal 50%, Selected / Negotiation, Renewal 75%, Renewal DQ 90%, Contract Negotiation, Procurement, Sales Ops Review, Finance Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_NAICS__c</fullName>
        <description>Primary NAICS Number</description>
        <label>Primary NAICS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Account_Name__c</fullName>
        <description>Prior account name</description>
        <label>Prior Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Account_Revenue__c</fullName>
        <description>If account revenue changes this field displays Prior account revenue</description>
        <label>Prior Account Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 10 Million</fullName>
                </value>
                <value>
                    <fullName>10 - 25 Million</fullName>
                </value>
                <value>
                    <fullName>25 - 100 Million</fullName>
                </value>
                <value>
                    <fullName>100 - 500 Million</fullName>
                </value>
                <value>
                    <fullName>500 Million - 1 Billion</fullName>
                </value>
                <value>
                    <fullName>1 Billion - 5 Billion</fullName>
                </value>
                <value>
                    <fullName>5 Billion +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Groups_Sold__c</fullName>
        <description>This field is part of Traction tool implementation. It shows what Products, if any, have been sold or are being sold to the Account. 
JIRA: SFDCSPT-96</description>
        <formula>IF(Partnership_Group_Products_Closed_Won__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionPartnershipColor&apos;,&apos;Partnership Product Group Sold&apos;,26, 26),
IF(Partnership_Group_Products_Open__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionPartnershipBW&apos;,&apos;Partnership Product Group Open&apos;,26, 26), &quot;&quot;))

&amp; &apos; &apos; &amp;

IF(POC_Perpetual_Group_Products_Closed_Won__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionPOCPerpetualColor1&apos;,&apos;POC/Perpetual Product Group Sold&apos;,26, 26),
IF(POC_Perpetual_Group_Products_Open__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionPOCPerpetualBW1&apos;,&apos;POC/Perpetual Product Group Open&apos;,26, 26), &quot;&quot;))

&amp; &apos; &apos; &amp;

IF(Prof_Services_Group_Products_Closed_Won__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionProfServicesColor1&apos;,&apos;Professional Services Product Group Sold&apos;,26, 26),
IF(Prof_Services_Group_Products_Open__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionProfServicesBW1&apos;,&apos;Professional Services Product Group Open&apos;,26, 26), &quot;&quot;)) 

&amp;&apos; &apos; &amp;

IF(Support_Group_Products_Closed_Won__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionSupportColor&apos;,&apos;Support Product Group Sold&apos;,26, 26),
IF(Support_Group_Products_Open__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionSupportBW&apos;,&apos;Support Product Group Open&apos;,26, 26), &quot;&quot;))

&amp; &apos; &apos; &amp;

IF(Subscription_Group_Products_Closed_Won__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionSubscriptionColor&apos;,&apos;Subscription Product Group Sold&apos;,26, 26),
IF(Subscription_Group_Products_Open__c &gt; 0,
IMAGE(&apos;/resource/ProductGroupTractionSubscriptionBW&apos;,&apos;Subscription Product Group Open&apos;,26, 26), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows what Product groups, if any, have been or are being sold to the Account (i.e. groups whose Products are associated with Closed Won or Open Opportunities).</inlineHelpText>
        <label>Product Groups Sold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Services_Group_Products_Closed_Won__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Professional Services&quot;, associated with Closed Won Opportunities on the Account (Professional Services: Consulting, Innovation Lab, Training). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Professional Services&quot; associated with Closed Won Opportunities on the Account (Professional Services: Consulting, Innovation Lab, Training).</inlineHelpText>
        <label>Prof. Serv. Group Products (Closed Won)</label>
        <summaryFilterItems>
            <field>Opportunity.Prof_Services_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prof_Services_Group_Products_Open__c</fullName>
        <businessOwnerUser>nadia.gainsbourg@neo4j.com.trndevqa</businessOwnerUser>
        <description>This field is part of Traction tool implementation. Shows the number of Products from a distinct Group - &quot;Professional Services&quot;, associated with Open Opportunities on the Account (Professional Services: Consulting, Innovation Lab, Training). JIRA: SFDCSPT-96</description>
        <inlineHelpText>Number of Products from a distinct Group - &quot;Professional Services&quot; associated with Open Opportunities on the Account Professional (Services: Consulting, Innovation Lab, Training).</inlineHelpText>
        <label>Prof. Services Group Products (Open)</label>
        <summaryFilterItems>
            <field>Opportunity.Prof_Services_Product_Group_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Prospecting, Qualification SDR, Qualification, Needs Analysis, Renewal 25%, Proposal/Price Quote, Renewal 50%, Selected / Negotiation, Renewal 75%, Renewal DQ 90%, Contract Negotiation, Procurement, Sales Ops Review, Finance Review</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_in_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked true if there is a project that is in production based off the CPP data under the account. Updated via process builder.</description>
        <label>Project in Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalTerritoryAccount__c</fullName>
        <description>Indicates what regional territory the Account falls into based on the shipping country and/or state. JIRA: SFDCSPT-306</description>
        <inlineHelpText>Indicates what regional territory the Account falls into based on the shipping country and/or state. Auto-populated.</inlineHelpText>
        <label>Regional Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Category__c</fullName>
        <label>Revenue Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Consider_Updates_After__c</fullName>
        <label>Consider Updates After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_App_Field__c</fullName>
        <label>RingLead App  Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Processed_Count__c</fullName>
        <label>Processed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLead_Do_Not_Merge_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is part of RingLead (duplicate management tool) implementation and is used exclusively by System Administrators when processing Accounts records.</description>
        <inlineHelpText>This field is part of RingLead (duplicate management tool) implementation and is used exclusively by System Administrators when processing Accounts records.</inlineHelpText>
        <label>RingLead Do Not Merge Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLead_Overwritten_Field_Values__c</fullName>
        <description>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</description>
        <inlineHelpText>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</inlineHelpText>
        <label>RingLead Overwritten Field Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running_User_Account_Owner__c</fullName>
        <description>created to use in dynamic reports where account owner = running user</description>
        <formula>IF( OwnerId  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Running User: Account Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>